# gemma-agent-testing

./: .env.example  README.md  llm_config.py  main.py  parse_response.py  prompts.py  pyproject.toml  test_parse_response.py
calculator/pkg/: calculator.py
functions/: get_file_content.py  get_files_info.py  run_python.py  write_file_content.py
lib/: local_genai.py  openai_genai.py  openrouter_genai.py
